# etl2pcap-macos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: compare_captures.py
src/etl2pcap_macos/: __init__.py  cli.py  etl_converter.py  pcapng_writer.py  profiles.py
tests/: test_extractor.py  test_ndis_raw_decoder.py  test_pcapng_writer.py  test_profiles.py
